<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="#C64B2D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:background="@drawable/edges"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="Pending Orders"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        android:textColor="#b0381c"
        android:background="@drawable/edges"
        android:fontFamily="sans-serif"
        android:textSize="20dp"
        android:paddingTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:orientation="vertical">
        <ListView
            android:id="@+id/listOrders"
            android:layout_width="match_parent"
            android:layout_height="368dp"
            android:choiceMode="multipleChoice"
            android:paddingTop="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#4b5c00"
                android:insetLeft="0dp"
                android:text="Start Order"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/end_button"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="#ad0200"
                android:text="End order"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/orderDetailsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#b0381c"

            android:clickable="true"
            android:enabled="true"
            android:text="Order Details"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#b0381c"
            android:onClick="editMenu"
            android:text="Edit Menu"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#b0381c"
            android:text="Profile"
            android:textAllCaps="false" />

        <Button

            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#722412"
            android:text="ToggleButton"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>